--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "antd": "^5.23.1",
     "axios": "^1.7.9",
+    "caniuse-lite": "^1.0.30001727",
+    "dotenv": "^16.5.0",
+    "firebase": "^11.7.3",
     "html-react-parser": "^5.2.2",
     "lucide-react": "^0.472.0",
     "react": "^18.3.1",
@@ -23,7 +26,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.2",
-    "react-router-dom": "^7.1.2"
+    "react-router-dom": "^7.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
