--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.2",
     "react-router-dom": "^7.1.2",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
